--- a/config/config.yml
+++ b/config/config.yml
@@ -4,7 +4,7 @@ defaults: &defaults
   facebook_app_id: 
   facebook_secret: 
   admin_emails: 
-    - ""
+    - "xuite.joke@gmail.com"
   google_analytics_key: ""
   default_logo_url: "/logo.png"
 
