--- a/test/fixtures/committees.yml
+++ b/test/fixtures/committees.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: committees
+#
+#  id             :integer          not null, primary key
+#  name           :string(255)
+#  party_id       :integer
+#  party_group_id :integer
+#  created_at     :datetime         not null
+#  updated_at     :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 # This model initially had no columns defined.  If you add columns to the
