--- a/test/fixtures/election_committees.yml
+++ b/test/fixtures/election_committees.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: election_committees
+#
+#  id           :integer          not null, primary key
+#  election_id  :integer
+#  committee_id :integer
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 # This model initially had no columns defined.  If you add columns to the
