--- a/test/fixtures/verbal_questions.yml
+++ b/test/fixtures/verbal_questions.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: verbal_questions
+#
+#  id         :integer          not null, primary key
+#  content    :text
+#  gazette_id :integer
+#  position   :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 # This model initially had no columns defined.  If you add columns to the
