--- a/test/fixtures/gazettes.yml
+++ b/test/fixtures/gazettes.yml
@@ -2,11 +2,12 @@
 #
 # Table name: gazettes
 #
-#  id         :integer          not null, primary key
-#  content    :text(2147483647)
-#  ly_id      :integer
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id                     :integer          not null, primary key
+#  content                :text(2147483647)
+#  ly_id                  :integer
+#  created_at             :datetime         not null
+#  updated_at             :datetime         not null
+#  verbal_questions_count :integer          default(0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
